--- a/lab-hypothesis-testing.ipynb
+++ b/lab-hypothesis-testing.ipynb
@@ -38,20 +38,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "#libraries\n",
     "import pandas as pd\n",
     "import scipy.stats as st\n",
+    "from scipy.stats import ttest_ind\n",
     "import numpy as np\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +279,7 @@
        "[800 rows x 11 columns]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +329,7 @@
        "TtestResult(statistic=-3.3349632905124063, pvalue=0.0015987219490841195, df=50.83784116232685)"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +377,7 @@
        "TtestResult(statistic=array([10.43813354,  7.63707816, 13.41744998, 10.01569661]), pvalue=array([2.52037245e-16, 4.82699849e-11, 1.55146141e-21, 2.29493279e-15]), df=array([75.88324448, 77.71095111, 74.24631138, 73.25892564]))"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +520,7 @@
        "4       624.0       262.0         1.9250             65500.0  "
       ]
      },
-     "execution_count": 177,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -549,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -571,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -620,6 +621,8 @@
        "      <th>distance_to_hospital</th>\n",
        "      <th>close_to_school_or_hospital</th>\n",
        "      <th>far_to_school_or_hospital</th>\n",
+       "      <th>mean_accessibility</th>\n",
+       "      <th>mean_distance</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -636,8 +639,10 @@
        "      <td>66900.0</td>\n",
        "      <td>214.607810</td>\n",
        "      <td>215.386100</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>214.996955</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -652,8 +657,10 @@
        "      <td>80100.0</td>\n",
        "      <td>214.869544</td>\n",
        "      <td>215.648559</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>215.259051</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -668,8 +675,10 @@
        "      <td>85700.0</td>\n",
        "      <td>214.430151</td>\n",
        "      <td>215.196305</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>214.813228</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -684,8 +693,10 @@
        "      <td>73400.0</td>\n",
        "      <td>214.401853</td>\n",
        "      <td>215.167039</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>214.784446</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -700,11 +711,15 @@
        "      <td>65500.0</td>\n",
        "      <td>214.352350</td>\n",
        "      <td>215.116410</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>214.734380</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -732,8 +747,10 @@
        "      <td>111400.0</td>\n",
        "      <td>226.168972</td>\n",
        "      <td>226.888704</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>226.528838</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16996</th>\n",
@@ -748,8 +765,10 @@
        "      <td>79000.0</td>\n",
        "      <td>226.253241</td>\n",
        "      <td>226.974512</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>226.613876</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16997</th>\n",
@@ -764,8 +783,10 @@
        "      <td>103600.0</td>\n",
        "      <td>227.082618</td>\n",
        "      <td>227.821060</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>227.451839</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16998</th>\n",
@@ -780,8 +801,10 @@
        "      <td>85800.0</td>\n",
        "      <td>227.054465</td>\n",
        "      <td>227.792296</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>227.423380</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16999</th>\n",
@@ -796,12 +819,14 @@
        "      <td>94600.0</td>\n",
        "      <td>226.205115</td>\n",
        "      <td>226.922837</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>226.563976</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>17000 rows × 13 columns</p>\n",
+       "<p>17000 rows × 15 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -832,35 +857,35 @@
        "16999       806.0       270.0         3.0147             94600.0   \n",
        "\n",
        "       distance_to_school  distance_to_hospital  close_to_school_or_hospital  \\\n",
-       "0              214.607810            215.386100                        False   \n",
-       "1              214.869544            215.648559                        False   \n",
-       "2              214.430151            215.196305                        False   \n",
-       "3              214.401853            215.167039                        False   \n",
-       "4              214.352350            215.116410                        False   \n",
+       "0              214.607810            215.386100                            0   \n",
+       "1              214.869544            215.648559                            0   \n",
+       "2              214.430151            215.196305                            0   \n",
+       "3              214.401853            215.167039                            0   \n",
+       "4              214.352350            215.116410                            0   \n",
        "...                   ...                   ...                          ...   \n",
-       "16995          226.168972            226.888704                        False   \n",
-       "16996          226.253241            226.974512                        False   \n",
-       "16997          227.082618            227.821060                        False   \n",
-       "16998          227.054465            227.792296                        False   \n",
-       "16999          226.205115            226.922837                        False   \n",
+       "16995          226.168972            226.888704                            0   \n",
+       "16996          226.253241            226.974512                            0   \n",
+       "16997          227.082618            227.821060                            0   \n",
+       "16998          227.054465            227.792296                            0   \n",
+       "16999          226.205115            226.922837                            0   \n",
        "\n",
-       "       far_to_school_or_hospital  \n",
-       "0                           True  \n",
-       "1                           True  \n",
-       "2                           True  \n",
-       "3                           True  \n",
-       "4                           True  \n",
-       "...                          ...  \n",
-       "16995                       True  \n",
-       "16996                       True  \n",
-       "16997                       True  \n",
-       "16998                       True  \n",
-       "16999                       True  \n",
+       "       far_to_school_or_hospital  mean_accessibility  mean_distance  \n",
+       "0                              1                 0.5     214.996955  \n",
+       "1                              1                 0.5     215.259051  \n",
+       "2                              1                 0.5     214.813228  \n",
+       "3                              1                 0.5     214.784446  \n",
+       "4                              1                 0.5     214.734380  \n",
+       "...                          ...                 ...            ...  \n",
+       "16995                          1                 0.5     226.528838  \n",
+       "16996                          1                 0.5     226.613876  \n",
+       "16997                          1                 0.5     227.451839  \n",
+       "16998                          1                 0.5     227.423380  \n",
+       "16999                          1                 0.5     226.563976  \n",
        "\n",
-       "[17000 rows x 13 columns]"
+       "[17000 rows x 15 columns]"
       ]
      },
-     "execution_count": 207,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -875,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -885,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -895,10 +920,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "T-statistic: -232.79194588337228\n",
+      "P-value: 0.0000e+00\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from scipy.stats import ttest_ind\n",
+    "\n",
+    "# Assuming you have your DataFrame as `df`\n",
+    "\n",
+    "# Calculate the average between 'distance_to_school' and 'distance_to_hospital'\n",
+    "df['mean_distance'] = df[['distance_to_school', 'distance_to_hospital']].mean(axis=1)\n",
+    "\n",
+    "# Perform a t-test to compare 'mean_distance' with 'median_house_value'\n",
+    "t_stat, p_value = ttest_ind(df['mean_distance'], df['median_house_value'])\n",
+    "\n",
+    "print(f\"T-statistic: {t_stat}\")\n",
+    "print(f\"P-value: {p_value:.4e}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        214.996955\n",
+       "1        215.259051\n",
+       "2        214.813228\n",
+       "3        214.784446\n",
+       "4        214.734380\n",
+       "            ...    \n",
+       "16995    226.528838\n",
+       "16996    226.613876\n",
+       "16997    227.451839\n",
+       "16998    227.423380\n",
+       "16999    226.563976\n",
+       "Name: mean_distance, Length: 17000, dtype: float64"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['mean_distance'] "
+   ]
   },
   {
    "cell_type": "code",
